force-app/main/default/objects/Opportunity_Approval__c/fields/Fairness_Opinion_Publicly_Disclosed__c.field-meta.xml
<CustomField>
    <fullName>Fairness_Opinion_Publicly_Disclosed__c</fullName>
    <label>Fairness Opinion Publicly Disclosed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>