force-app/main/default/objects/Opportunity_Approval__c/fields/Fairness_Opinion_Staffing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Fairness_Opinion_Staffing_Notes__c</fullName>
    <label>Fairness Opinion Staffing Notes</label>
    <type>TextArea</type>
</CustomField>