force-app/main/default/objects/Opportunity_Approval__c/fields/Fairness_Services_and_Fees__c.field-meta.xml
<CustomField>
    <fullName>Fairness_Services_and_Fees__c</fullName>
    <label>Fairness Services and Fees</label>
    <type>TextArea</type>
</CustomField>