force-app/main/default/objects/Opportunity_Approval__c/fields/Fee_Differences__c.field-meta.xml
<CustomField>
    <fullName>Fee_Differences__c</fullName>
    <label>Fee Differences</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>