force-app/main/default/objects/Opportunity_Approval__c/fields/Fee_Structure__c.field-meta.xml
<CustomField>
    <fullName>Fee_Structure__c</fullName>
    <description>used on NBC</description>
    <inlineHelpText>Include the retainer amount in the fee structure</inlineHelpText>
    <label>Fee Structure</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>