force-app/main/default/objects/Opportunity_Approval__c/fields/Fee_Subject_To_Contingent_Fees__c.field-meta.xml
<CustomField>
    <fullName>Fee_Subject_To_Contingent_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Subject To Contingent Fees</label>
    <type>Checkbox</type>
</CustomField>