force-app/main/default/objects/Opportunity_Approval__c/fields/FEIS_Opine_Option_2_Form__c.field-meta.xml
<CustomField>
    <fullName>FEIS_Opine_Option_2_Form__c</fullName>
    <formula>IF( FEIS_Opine_Option_2__c, &quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FEIS Opine Option 2 Form</label>
    <type>Text</type>
</CustomField>