force-app/main/default/objects/Opportunity_Approval__c/fields/FEIS_Opine_Option_3__c.field-meta.xml
<CustomField>
    <fullName>FEIS_Opine_Option_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check if applicable</label>
    <type>Checkbox</type>
</CustomField>