force-app/main/default/objects/Opportunity_Approval__c/fields/FEIS_Other_Forms_of_Consid_Desc__c.field-meta.xml
<CustomField>
    <fullName>FEIS_Other_Forms_of_Consid_Desc__c</fullName>
    <label>FEIS - Other Forms of Consideration Desc</label>
    <type>TextArea</type>
</CustomField>