force-app/main/default/objects/Opportunity_Approval__c/fields/FEIS_Other_Legal_Structure_Desc__c.field-meta.xml
<CustomField>
    <fullName>FEIS_Other_Legal_Structure_Desc__c</fullName>
    <label>FEIS - Other Legal Structure Desc</label>
    <type>TextArea</type>
</CustomField>