force-app/main/default/objects/Opportunity_Approval__c/fields/Final_Ratchet_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Ratchet_Amount__c</fullName>
    <label>Final Ratchet Amount (MM)</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>