force-app/main/default/objects/Opportunity_Approval__c/fields/Financial_Buyer_Feasibility__c.field-meta.xml
<CustomField>
    <fullName>Financial_Buyer_Feasibility__c</fullName>
    <label>Financial Buyer Feasibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>