force-app/main/default/objects/Opportunity_Approval__c/fields/Financial_Objects_Count__c.field-meta.xml
<CustomField>
    <fullName>Financial_Objects_Count__c</fullName>
    <label>Financial Objects Count</label>
    <summaryForeignKey>Financials__c.Related_Approval__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>