force-app/main/default/objects/Opportunity_Approval__c/fields/Financials_Audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Financials_Audit_Notes__c</fullName>
    <label>Financials Audit Notes</label>
    <type>TextArea</type>
</CustomField>