force-app/main/default/objects/Opportunity_Approval__c/fields/Financials_Subject_to_Audit__c.field-meta.xml
<CustomField>
    <fullName>Financials_Subject_to_Audit__c</fullName>
    <label>Financials Subject to Audit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>