force-app/main/default/objects/Opportunity_Approval__c/fields/Flat_Fee__c.field-meta.xml
<CustomField>
    <fullName>Flat_Fee__c</fullName>
    <label>Flat Fee (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>