force-app/main/default/objects/Opportunity_Approval__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <formula>Related_Opportunity__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form</label>
    <type>Text</type>
</CustomField>