force-app/main/default/objects/Opportunity_Approval__c/fields/Form_of_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Consideration__c</fullName>
    <label>Form of Consideration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>