force-app/main/default/objects/Opportunity_Approval__c/fields/Form_of_Opinion_Completed__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Opinion_Completed__c</fullName>
    <formula>IF(
OR(FEIS_Opine_Option_1__c,
 FEIS_Opine_Option_2__c,
 FEIS_Opine_Option_3__c,
 FEIS_Opine_Option_4__c,
 FEIS_Opine_Option_5__c,
 FEIS_Opine_Option_6__c,
 Form_of_Opinion_Not_Yet_Known__c
),
TRUE, FALSE)</formula>
    <label>Form of Opinion Completed</label>
    <type>Checkbox</type>
</CustomField>