force-app/main/default/objects/Opportunity_Approval__c/fields/Form_of_Opinion_Not_Yet_Known__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Opinion_Not_Yet_Known__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check if applicable</label>
    <type>Checkbox</type>
</CustomField>