force-app/main/default/objects/Opportunity_Approval__c/fields/Form_of_Opinion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Opinion_Notes__c</fullName>
    <label>Form of Opinion Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>