force-app/main/default/objects/Opportunity_Approval__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <description>Used for approval processes and to identify records between FEIS and NBC</description>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FEIS</fullName>
            </value>
            <value>
                <fullName>NBC</fullName>
            </value>
            <value>
                <fullName>CNBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>