force-app/main/default/objects/Opportunity_Approval__c/fields/Fourth_Ratchet_Percent__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Ratchet_Percent__c</fullName>
    <label>Fourth Ratchet Percent</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>