force-app/main/default/objects/Opportunity_Approval__c/fields/Fourth_Ratchet_To_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Ratchet_To_Amount__c</fullName>
    <label>Fourth Ratchet To Amount (MM)</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>