force-app/main/default/objects/Opportunity_Approval__c/fields/Geography_Form__c.field-meta.xml
<CustomField>
    <fullName>Geography_Form__c</fullName>
    <formula>IF( Geography__c,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geography Form</label>
    <type>Text</type>
</CustomField>