force-app/main/default/objects/Opportunity_Approval__c/fields/Geography_Team__c.field-meta.xml
<CustomField>
    <fullName>Geography_Team__c</fullName>
    <label>Geography Team</label>
    <type>TextArea</type>
</CustomField>