force-app/main/default/objects/Opportunity_Approval__c/fields/Grade_System__c.field-meta.xml
<CustomField>
    <fullName>Grade_System__c</fullName>
    <label>Grade System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Revisit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>