force-app/main/default/objects/Opportunity_Approval__c/fields/Has_Other_Shareholders__c.field-meta.xml
<CustomField>
    <fullName>Has_Other_Shareholders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Other Shareholders</label>
    <type>Checkbox</type>
</CustomField>