force-app/main/default/objects/Opportunity_Approval__c/fields/Has_Other_Shareholders_Form__c.field-meta.xml
<CustomField>
    <fullName>Has_Other_Shareholders_Form__c</fullName>
    <formula>IF( Has_Other_Shareholders__c, &quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Other Shareholders Form</label>
    <type>Text</type>
</CustomField>