force-app/main/default/objects/Opportunity_Approval__c/fields/Head_Approval__c.field-meta.xml
<CustomField>
    <fullName>Head_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please confirm that a group head has approved prior to submitting to the committee.</description>
    <label>Group Head Approval</label>
    <type>Checkbox</type>
</CustomField>