force-app/main/default/objects/Opportunity_Approval__c/fields/Head_Approval_FORM__c.field-meta.xml
<CustomField>
    <fullName>Head_Approval_FORM__c</fullName>
    <formula>IF(Head_Approval__c, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head Approval FORM</label>
    <type>Text</type>
</CustomField>