force-app/main/default/objects/Opportunity_Approval__c/fields/HL_Financial_Sponsors_Group_Hedge_Fund__c.field-meta.xml
<CustomField>
    <fullName>HL_Financial_Sponsors_Group_Hedge_Fund__c</fullName>
    <label>HL Financial Sponsors Group/Hedge Fund</label>
    <type>TextArea</type>
</CustomField>