force-app/main/default/objects/Opportunity_Approval__c/fields/HL_Met_with_Board_Relationship__c.field-meta.xml
<CustomField>
    <fullName>HL_Met_with_Board_Relationship__c</fullName>
    <label>HL Met with Board Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>