force-app/main/default/objects/Opportunity_Approval__c/fields/HL_Relationship_to_Company__c.field-meta.xml
<CustomField>
    <fullName>HL_Relationship_to_Company__c</fullName>
    <label>HL Relationship to Company</label>
    <type>TextArea</type>
</CustomField>