force-app/main/default/objects/Opportunity_Approval__c/fields/HL_Relationship_to_Key_Shareholders__c.field-meta.xml
<CustomField>
    <fullName>HL_Relationship_to_Key_Shareholders__c</fullName>
    <label>HL Relationship to Key Shareholders</label>
    <type>TextArea</type>
</CustomField>