force-app/main/default/objects/Opportunity_Approval__c/fields/HL_Senior_Management_FollowUp__c.field-meta.xml
<CustomField>
    <fullName>HL_Senior_Management_FollowUp__c</fullName>
    <label>HL Senior Management Follow-Up</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>