force-app/main/default/objects/Opportunity_Approval__c/fields/Houlihan_Lokey_Competition__c.field-meta.xml
<CustomField>
    <fullName>Houlihan_Lokey_Competition__c</fullName>
    <label>Houlihan Lokey Competition</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>