force-app/main/default/objects/Opportunity_Approval__c/fields/Industry_Group_Head__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Group Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>