force-app/main/default/objects/Opportunity_Approval__c/fields/Industry_Group_Head_Email__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group_Head_Email__c</fullName>
    <label>Industry Group Head Email</label>
    <type>Email</type>
</CustomField>