force-app/main/default/objects/Opportunity_Approval__c/fields/International_Angle_Notes__c.field-meta.xml
<CustomField>
    <fullName>International_Angle_Notes__c</fullName>
    <label>International Angle Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>