force-app/main/default/objects/Opportunity_Approval__c/fields/Is_Client_EU__c.field-meta.xml
<CustomField>
    <fullName>Is_Client_EU__c</fullName>
    <formula>IF(Related_Opportunity__r.Client__r.Is_Client_EU_CF__c ||  EU_Override__c, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <label>Is Client EU</label>
    <type>Text</type>
</CustomField>