force-app/main/default/objects/Opportunity_Approval__c/fields/Is_Client_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_Client_Public__c</fullName>
    <label>Is Client Public?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>