force-app/main/default/objects/Opportunity_Approval__c/fields/Is_Majority_Sale__c.field-meta.xml
<CustomField>
    <fullName>Is_Majority_Sale__c</fullName>
    <label>Is Majority Sale?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>