force-app/main/default/objects/Opportunity_Approval__c/fields/Is_Progress_Fee_Creditable__c.field-meta.xml
<CustomField>
    <fullName>Is_Progress_Fee_Creditable__c</fullName>
    <inlineHelpText>Enter % that is Creditable</inlineHelpText>
    <label>Progress Fee Creditable ?</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>