force-app/main/default/objects/Opportunity_Approval__c/fields/IsApprovalButton__c.field-meta.xml
<CustomField>
    <fullName>IsApprovalButton__c</fullName>
    <formula>if(and( Approved__c ==false,  Submit_For_Review__c ==true),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsApprovalButton</label>
    <type>Checkbox</type>
</CustomField>