force-app/main/default/objects/Opportunity_Approval__c/fields/Key_Decision_Makers_and_Influencers__c.field-meta.xml
<CustomField>
    <fullName>Key_Decision_Makers_and_Influencers__c</fullName>
    <inlineHelpText>Please describe the politics of the situation as well as how much the Company already knows about HL.</inlineHelpText>
    <label>Who Are The Key Decision-Makers?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>