force-app/main/default/objects/Opportunity_Approval__c/fields/Legacy_SLX_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SLX_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy_SLX_ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>