force-app/main/default/objects/Opportunity_Approval__c/fields/Legal_Structure__c.field-meta.xml
<CustomField>
    <fullName>Legal_Structure__c</fullName>
    <label>Legal Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Merger</fullName>
            </value>
            <value>
                <fullName>Purchase/Sale of Assets</fullName>
            </value>
            <value>
                <fullName>Tender Offer/Merger</fullName>
            </value>
            <value>
                <fullName>Exchange Offer/Merger</fullName>
            </value>
            <value>
                <fullName>Recap</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>