force-app/main/default/objects/Opportunity_Approval__c/fields/Lightning_link__c.field-meta.xml
<CustomField>
    <fullName>Lightning_link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp; &apos;/lightning/r/Opportunity_Approval__c/&apos;&amp;  Id  &amp;&apos;/view?0.source=alohaHeader&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lightning Link</label>
    <type>Text</type>
</CustomField>