force-app/main/default/objects/Opportunity_Approval__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <formula>NOT(BLANKVALUE(TEXT(Grade__c),&apos;F&apos;) == &apos;F&apos;) ||  Reviewed__c</formula>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>