force-app/main/default/objects/Opportunity_Approval__c/fields/Lockups_on_Future_M_A_Financing_formula__c.field-meta.xml
<CustomField>
    <fullName>Lockups_on_Future_M_A_Financing_formula__c</fullName>
    <description>for email template, i know it&apos;s redundant, but this is so that it is passed into cognos without having to change model which i do not have time for right now - ayu 6/12</description>
    <formula>TEXT(Lockups_on_Future_M_A_or_Financing_Work__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lockups on Future M&amp;A Financing formula</label>
    <type>Text</type>
</CustomField>