force-app/main/default/objects/Opportunity_Approval__c/fields/Lockups_on_Future_M_A_or_Financing_Work__c.field-meta.xml
<CustomField>
    <fullName>Lockups_on_Future_M_A_or_Financing_Work__c</fullName>
    <label>Lockups on Future M&amp;A or Financing Work</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, on future M&amp;A</fullName>
            </value>
            <value>
                <fullName>Yes, on future Financing</fullName>
            </value>
            <value>
                <fullName>Yes, on future M&amp;A and Financing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>