force-app/main/default/objects/Opportunity_Approval__c/fields/Met_with_Key_Shareholders__c.field-meta.xml
<CustomField>
    <fullName>Met_with_Key_Shareholders__c</fullName>
    <label>Met with Key Shareholders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>