force-app/main/default/objects/Opportunity_Approval__c/fields/Monthly_Retainers__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Retainers__c</fullName>
    <label>Monthly Retainers</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>