force-app/main/default/objects/Opportunity_Approval__c/fields/NBC_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>NBC_Review_Comments__c</fullName>
    <label>NBC Review Comments</label>
    <type>TextArea</type>
</CustomField>