force-app/main/default/objects/Opportunity_Approval__c/fields/NBC_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>NBC_Submitter_Email__c</fullName>
    <label>NBC Submitter Email</label>
    <type>Email</type>
</CustomField>