force-app/main/default/objects/Opportunity_Approval__c/fields/Net_Worth_Acquisition_Shell_MM__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth_Acquisition_Shell_MM__c</fullName>
    <inlineHelpText>If greater than $0, further discussion may be necessary.</inlineHelpText>
    <label>Net Worth - Acq Shell Sponsor (MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>