force-app/main/default/objects/Opportunity_Approval__c/fields/Net_Worth_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth_Corporate__c</fullName>
    <inlineHelpText>If less than $5 Million, further discussion may be necessary.</inlineHelpText>
    <label>Net Worth - Corporate (MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>