force-app/main/default/objects/Opportunity_Approval__c/fields/Next_Scheduled_Call__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Next Scheduled Call</label>
    <type>Checkbox</type>
</CustomField>