force-app/main/default/objects/Opportunity_Approval__c/fields/Next_Scheduled_Call_form__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Call_form__c</fullName>
    <description>Used for Cognos reporting</description>
    <formula>IF(Next_Scheduled_Call__c, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Scheduled Call</label>
    <type>Text</type>
</CustomField>