force-app/main/default/objects/Opportunity_Approval__c/fields/No_Financials__c.field-meta.xml
<CustomField>
    <fullName>No_Financials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Financials</label>
    <type>Checkbox</type>
</CustomField>