force-app/main/default/objects/Opportunity_Approval__c/fields/No_Financials_Explanation__c.field-meta.xml
<CustomField>
    <fullName>No_Financials_Explanation__c</fullName>
    <label>No Financials Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>