force-app/main/default/objects/Opportunity_Approval__c/fields/onNBCViewAccess__c.field-meta.xml
<CustomField>
    <fullName>onNBCViewAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnNBCViewAccess</label>
    <type>Checkbox</type>
</CustomField>