force-app/main/default/objects/Opportunity_Approval__c/fields/onOIT__c.field-meta.xml
<CustomField>
    <fullName>onOIT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>onOIT</label>
    <type>Checkbox</type>
</CustomField>