force-app/main/default/objects/Opportunity_Approval__c/fields/Opinion_Affiliated_Parties_Summary__c.field-meta.xml
<CustomField>
    <fullName>Opinion_Affiliated_Parties_Summary__c</fullName>
    <label>Opinion Affiliated Parties Summary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>