force-app/main/default/objects/Opportunity_Approval__c/fields/Opinion_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Opinion_Delivery_Date__c</fullName>
    <label>Opinion Delivery Date</label>
    <type>Date</type>
</CustomField>