force-app/main/default/objects/Opportunity_Approval__c/fields/Opinion_Parties_Affiliated__c.field-meta.xml
<CustomField>
    <fullName>Opinion_Parties_Affiliated__c</fullName>
    <label>Opinion Parties Affiliated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>